<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".7"
        android:background="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/layout_light_for_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <customviews.TypeFaceTextMonixRegular
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_out"
            android:textSize="16dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorView" />

        <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/are_you_sure"
            android:textColor="@color/colorText"
            android:textSize="17dp"
            geekui:customTypeface="OpenSans_Regular.ttf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/layout_dark_for_dialog"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/colorTextFooter"
                    android:textSize="15dp"
                    geekui:customTypeface="OpenSans_Regular.ttf" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/colorView" />

            <LinearLayout
                android:id="@+id/yes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/colorTextFooter"
                    android:textSize="15dp"
                    geekui:customTypeface="OpenSans_Regular.ttf" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>