<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".7"
        android:background="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/layout_light_for_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <customviews.TypeFaceTextMonixRegular
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/new_version_available"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorView" />

        <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
           android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/this_is_a_mandatory_app_update_please_update_your_app_version_sorry_for_the_inconvenience_thanks"
            android:textColor="@color/colorText"
            android:textSize="13dp"
            geekui:customTypeface="OpenSans_Regular.ttf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorView" />

        <LinearLayout
            android:id="@+id/ll_update"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/layout_dark_for_dialog"
            android:gravity="center"
            android:orientation="horizontal">

            <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textColor="@color/colorTextFooter"
                android:textSize="15dp"
                geekui:customTypeface="OpenSans_Regular.ttf" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>