<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".7"
        android:background="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/layout_light_for_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <customviews.TypeFaceTextMonixRegular
            android:textColor="@color/colorPrimary"
            android:id="@+id/tv_cancel_ride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/oops"

            android:textSize="16dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorView" />

        <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/booking_cancel_by_customer"
            android:textColor="@color/colorText"
            android:textSize="17dp"
            geekui:customTypeface="OpenSans_Regular.ttf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorView" />

        <LinearLayout
            android:id="@+id/ll_ok_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/layout_dark_for_dialog"
            android:gravity="center">

            <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/colorTextFooter"
                android:textSize="16dp"
                geekui:customTypeface="OpenSans_Regular.ttf" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>