<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".7"
        android:background="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/layout_light_for_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <customviews.TypeFaceTextMonixRegular
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/query_submitted"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorView" />

        <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/your_query_is_submitted_successfully_our_executive_will_get_back_to_yo_in_any_moment"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:id="@+id/ll_ok"
            android:background="@drawable/layout_dark_for_dialog">



            <LinearLayout
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <com.apporio.demotaxiappdriver.typeface.TypefaceTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textColor="@color/colorTextFooter"
                    android:textSize="15dp"
                    geekui:customTypeface="OpenSans_Regular.ttf" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>